# outbound-calls-voice-agent

./: .env  .gitignore  CLAUDE.md  MCP_INTEGRATION.md  README.md  agent.py  mcp_server.py  outbound.py  prompts.py  pyproject.toml  test_mcp_server.py  tools.py
tests/: test_tools.py
